SERVER-34773 Use kSessionsNamespaceString instead of its constituent StringData entries

(cherry picked from commit 8200acfe03477cb6311768b3d9609cfb339a7eee)