src/mongo/s/catalog/sharding_catalog_manager_shard_operations.cpp
@@ -136,7 +136,7 @@ StatusWith<std::string> generateNewShardName(OperationContext* opCtx) {
 StatusWith<Shard::CommandResponse> ShardingCatalogManager::_runCommandForAddShard(
     OperationContext* opCtx,
     RemoteCommandTargeter* targeter,
-    const std::string& dbName,
+    StringData dbName,
     const BSONObj& cmdObj) {
     auto swHost = targeter->findHost(opCtx, ReadPreferenceSetting{ReadPreference::PrimaryOnly});
     if (!swHost.isOK()) {
@@ -145,7 +145,7 @@ StatusWith<Shard::CommandResponse> ShardingCatalogManager::_runCommandForAddShar
     auto host = std::move(swHost.getValue());
 
     executor::RemoteCommandRequest request(
-        host, dbName, cmdObj, rpc::makeEmptyMetadata(), nullptr, Seconds(30));
+        host, dbName.toString(), cmdObj, rpc::makeEmptyMetadata(), nullptr, Seconds(30));
 
     executor::RemoteCommandResponse response =
         Status(ErrorCodes::InternalError, "Internal error running command");
@@ -304,8 +304,8 @@ StatusWith<ShardType> ShardingCatalogManager::_validateHostAsShard(
     std::shared_ptr<RemoteCommandTargeter> targeter,
     const std::string* shardProposedName,
     const ConnectionString& connectionString) {
-    auto swCommandResponse =
-        _runCommandForAddShard(opCtx, targeter.get(), "admin", BSON("isMaster" << 1));
+    auto swCommandResponse = _runCommandForAddShard(
+        opCtx, targeter.get(), NamespaceString::kAdminDb, BSON("isMaster" << 1));
     if (!swCommandResponse.isOK()) {
         return swCommandResponse.getStatus();
     }
@@ -485,14 +485,14 @@ Status ShardingCatalogManager::_dropSessionsCollection(
     OperationContext* opCtx, std::shared_ptr<RemoteCommandTargeter> targeter) {
 
     BSONObjBuilder builder;
-    builder.append("drop", SessionsCollection::kSessionsCollection.toString());
+    builder.append("drop", SessionsCollection::kSessionsNamespaceString.coll());
     {
         BSONObjBuilder wcBuilder(builder.subobjStart("writeConcern"));
         wcBuilder.append("w", "majority");
     }
 
     auto swCommandResponse = _runCommandForAddShard(
-        opCtx, targeter.get(), SessionsCollection::kSessionsDb.toString(), builder.done());
+        opCtx, targeter.get(), SessionsCollection::kSessionsNamespaceString.db(), builder.done());
     if (!swCommandResponse.isOK()) {
         return swCommandResponse.getStatus();
     }
@@ -508,8 +508,11 @@ Status ShardingCatalogManager::_dropSessionsCollection(
 StatusWith<std::vector<std::string>> ShardingCatalogManager::_getDBNamesListFromShard(
     OperationContext* opCtx, std::shared_ptr<RemoteCommandTargeter> targeter) {
 
-    auto swCommandResponse = _runCommandForAddShard(
-        opCtx, targeter.get(), "admin", BSON("listDatabases" << 1 << "nameOnly" << true));
+    auto swCommandResponse =
+        _runCommandForAddShard(opCtx,
+                               targeter.get(),
+                               NamespaceString::kAdminDb,
+                               BSON("listDatabases" << 1 << "nameOnly" << true));
     if (!swCommandResponse.isOK()) {
         return swCommandResponse.getStatus();
     }
@@ -658,7 +661,8 @@ StatusWith<std::string> ShardingCatalogManager::addShard(
     // the shard.
     LOG(2) << "going to insert shardIdentity document into shard: " << shardType;
     auto commandRequest = createShardIdentityUpsertForAddShard(opCtx, shardType.getName());
-    auto swCommandResponse = _runCommandForAddShard(opCtx, targeter.get(), "admin", commandRequest);
+    auto swCommandResponse =
+        _runCommandForAddShard(opCtx, targeter.get(), NamespaceString::kAdminDb, commandRequest);
     if (!swCommandResponse.isOK()) {
         return swCommandResponse.getStatus();
     }
@@ -691,7 +695,8 @@ StatusWith<std::string> ShardingCatalogManager::addShard(
                              << FeatureCompatibilityVersionCommandParser::kVersion34);
             break;
     }
-    auto versionResponse = _runCommandForAddShard(opCtx, targeter.get(), "admin", setFCVCmd);
+    auto versionResponse =
+        _runCommandForAddShard(opCtx, targeter.get(), NamespaceString::kAdminDb, setFCVCmd);
     if (!versionResponse.isOK()) {
         return versionResponse.getStatus();
     }
